# foreshadwownba-dvc-ml-pipeline

./: README.md  docs.txt  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: cml.yaml
data/input/: .gitignore
data/output/: .gitignore
data/processed/: .gitignore  models_results.csv  test_fs_df.csv  train_fs_df.csv
data/reports/: .gitignore  metrics.json
models/: .gitignore  cross_val_score.csv
notebooks/: test_dev.ipynb
src/: baseline_classifier.py  data_process.py  data_split.py  dummy_and_baseline_classifier.py  evaluate.py  feature_selection.py  get_training_dataset.py  initial_multiple_models_training.py  train.py
src/training/: train_cross_val.py
